--- a/public/bobia.html
+++ b/public/bobia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architronic-IA</title>
+    <title>OpenBook | RecomendAI</title>
     <script src="../js/sessao.js"></script>
     <script src="../js/alerta.js"></script>
     <link rel="stylesheet" href="css/dashboards.css">
