--- a/public/bobia.html
+++ b/public/bobia.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenBook | RecomendAI</title>
+
+
     <script src="../js/sessao.js"></script>
     <script src="../js/alerta.js"></script>
+
+    <link rel="shortcut icon" href="./assets/imgs/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/dashboards.css">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
