--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <script src="./js/sessao.js"></script>
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
+    <link rel="icon" href="./assets/imgs/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -40,7 +40,7 @@
       <span class="imgSpan">
         <p style="color: #a6481b; font-size: 90px;">Open Book</p>
         <br>
-        Criando a <span class="spanEnfase">nossa</span> própria <span class="spanEnfase">historia</span>
+        Criando a <span class="spanEnfase">nossa</span> própria <span class="spanEnfase">história</span>
       </span>
     </div>
 
