--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="css/login.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
+    <link rel="icon" href="./assets/imgs/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
