--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -22,45 +22,50 @@
 <!--onload="validarSessao()"-->
 <body onload="validarSessao()">
 
+  <div class="header">
+    <a href="index.html">
+      <img src="../assets/imgs/logoExtendedCopy.png" alt="logo" class="logo">
+    </a>
+      <ul class="navbar">
+        <li>
+          <a href="livros.html">Livros</a>
+        </li>
+        <li>
+          <a href="../bobia.html">recomendAI</a>
+        </li>
+        <li>
+          <a href="forum.html">Forum</a>
+        </li>
+        <li>|</li>
+        <li >
+          <a class="paginaAtual" href="usuario.html">
+            <div class="hello">
+              <img class="imgPerf" 
+                  id="imgPerfil"
+                  src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg"
+                  alt="">
+              <h3 class="paginaAtual">Olá, <span class="paginaAtual" id="b_usuario">usuário</span>!</h3>
+            </div>
+          </a>
+        </li>
+        <li>|</li>
+        <li>
+          <a>
+            <div class="botaoSair" onclick="limparSessao()">
+              <h3 style="color: #aa7744;" class="h3BotaoSair">Sair</h3>
+          </div>
+          </a>
+        </li>
+      </ul>
+  </div>
+
+
+
+
+
     <div class="janela">
 
-        <div class="header-left dash-header">
-
-            <h1>AquaTech</h1>
-
-            <div class="hello">
-                <img style="width: 50px; height: 50px; border-radius: 100%; margin-top: 10px; margin-right: 10px;" id="imgPerfil" src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg" alt="">
-                <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
-            </div>
-
-            <div class="btn-nav">
-                <h3>Perfil</h3>
-            </div>
-
-            <div class="btn-nav-white">
-                <a href="./forum.html">
-                    <h3>Fórum</h3>
-                </a>
-            </div>
-
-            <div class="btn-nav-white">
-                <a href="../bobia.html">
-                    <h3>recomendAI</h3>
-                </a>
-            </div>
-
-            <div class="btn-nav-white">
-              <a href="livros.html">
-                  <h3>Livros</h3>
-              </a>
-          </div>
-
-            <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
-            </div>
-
-        </div>
-
+        
 
 
 
