--- a/public/login.html
+++ b/public/login.html
@@ -60,7 +60,7 @@
             </div>
             <button class="botao" onclick="entrar()">Entrar</button>
             <div id="div_aguardar" class="loading-div">
-                <img src="./assets/circle-loading.gif" id="loading-gif">
+                <img src="./assets/aguarde-orange.gif" id="loading-gif">
             </div>
 
             <div id="div_erros_login"></div>
