adicionando css do header incluindo filtros

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -66,7 +66,7 @@
         
 
 
-        <div id="botoesForum" class="divBotaoForum">
+        <div id="botoesLivro" class="divBotaoForum">
             <button class="botaoForum" onclick="abrirCadastro()">Cadastrar Forum</button>
             <div style="color: white;" id="mensagemErro">
                 
