--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -20,7 +20,7 @@
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
-<!---->
+<!--onload="validarSessao(), atualizarForum()"-->
 
 <body onload="validarSessao(), atualizarForum()">
 
@@ -66,7 +66,7 @@
         
 
 
-        <div id="botoesLivro" class="divBotaoForum">
+        <div id="botoesForum" class="divBotaoForum">
             <button class="botaoForum" onclick="abrirCadastro()">Cadastrar Forum</button>
             <div style="color: white;" id="mensagemErro">
                 
