atualizando inserts de livro e preparando metricas para conexao com os graficos

--- a/public/dashboard/livros.html
+++ b/public/dashboard/livros.html
@@ -82,6 +82,7 @@
             <option value="aventura">Aventura</option>
             <option value="drama">drama</option>
             <option value="romance">Romance</option>
+            <option value="desenvolvimento">Desenvolvimento Pessoal</option>
           </select>
         </div>
       </div>
@@ -101,6 +102,7 @@
           <option value="aventura">Aventura</option>
           <option value="drama">drama</option>
           <option value="romance">Romance</option>
+          <option value="desenvolvimento">Desenvolvimento Pessoal</option>
         </select> <br>
       </div>
       <div class="ladoEsquerdoCadastro">
@@ -144,9 +146,6 @@
       <ul>
         <li>Ivan Rangel Pestana Marcolin <br> ivan.marcolin@sptech.school</li>
       </ul>
-    </div>
-    <div>
-
     </div>
     <div class="meioFooter">
       <img src="../assets/imgs/bookGif.webp" class="logo" />
