--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -24,7 +24,7 @@
 </head>
 <!--onload="validarSessao(), atualizarGraficos()"-->
 
-<body onload="atualizarGraficos()">
+<body onload="validarSessao(), atualizarGraficos()">
 
   <div class="header">
     <a href="index.html">
@@ -68,40 +68,43 @@
 
   <div class="janelaUsuario">
     <div class="perfilUsuario">
-      <div class="containerFotoPerfil">
-        <h2>Foto de Perfil</h2>
-        <img id="fotoPerfil"  
-          src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg"
-          alt="">
-        <button onclick="abrirInput()">Alterar imagem</button>
-      </div>
-      <div class="alterarPerfil">
-            <div>
-              <span>Nome:</span>
-              <input id="nome_input" type="text" placeholder="Seu nome" />
-            </div>
-            <div>
-              <span>NickName:</span>
-              <input id="nick_input" type="text" placeholder="Seu nickname" />
-            </div>
-            <div>
-              <span>E-mail:</span>
-              <input id="email_input" type="text" placeholder="meuemail@gmail.com" />
-            </div>
-              <button onclick="alterar()">Alterar</button>
-              <div id="mensagem_erro"></div>
+        <div class="containerPerfilUsuario">
+          <div class="containerFotoPerfil">
+            <h2>Foto de Perfil</h2>
+            <img id="fotoPerfil"  
+              src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg"
+              alt="">
+            <button onclick="abrirInput()">Alterar imagem</button>
+          </div>
+          <div class="alterarPerfil">
+                <div>
+                  <span>Nome:</span>
+                  <input id="nome_input" type="text" placeholder="Seu nome" />
+                </div>
+                <div>
+                  <span>NickName:</span>
+                  <input id="nick_input" type="text" placeholder="Seu nickname" />
+                </div>
+                <div>
+                  <span>E-mail:</span>
+                  <input id="email_input" type="text" placeholder="meuemail@gmail.com" />
+                </div>
+                  <button onclick="alterar()">Alterar</button>
+                  <div id="mensagem_erro"></div>
+          </div>
+        </div>
+        <div id="divAlterarImagem">
         </div>
     </div>
 
-    <div id="divAlterarImagem">
-
-    </div>
 
     <div class="graficoUsuario">
       <canvas id="generosPref"></canvas>
     </div>
 
   </div>
+
+
   <div class="graficoBarraUsuario">
     <div id="sectionCanvas1">
       <section>
@@ -116,9 +119,6 @@
       <ul>
         <li>Ivan Rangel Pestana Marcolin <br> ivan.marcolin@sptech.school</li>
       </ul>
-    </div>
-    <div>
-
     </div>
     <div class="meioFooter">
       <img src="../assets/imgs/bookGif.webp" class="logo" />
@@ -146,19 +146,19 @@
 
 <script>
 
-  var livrosJaneiro = 8;
+
+  var livrosJulho = 4;
+  var livrosAgosto = 2;
+  var livrosSetembro = 5;
+  var livrosOutubro = 1;
+  var livrosNovembro = 6;
+  var livrosDezembro = 5;
+  var livrosJaneiro = 4;
   var livrosFevereiro = 2;
   var livrosMarço = 1;
   var livrosAbril = 3;
-  var livrosMaio = 6;
+  var livrosMaio = 2;
   var livrosJunho = 0;
-  var livrosJulho = 7;
-  var livrosAgosto = 2;
-  var livrosSetembro = 5;
-  var livrosOutubro = 7;
-  var livrosNovembro = 8;
-  var livrosDezembro = 9;
-
 
 
 
@@ -199,6 +199,8 @@
   }
 
   var divGenerosPref = document.getElementById('generosPref').getContext('2d');
+  divGenerosPref.canvas.parentNode.style.width = '500px';
+  divGenerosPref.canvas.parentNode.style.height = '500px';
   divGenerosPref.canvas.width = 1;
   divGenerosPref.canvas.height = 1;
 
@@ -241,9 +243,9 @@
     {
       type: 'bar',
       data: {
-        labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho','Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro' ],
+        labels: ['Julho','Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro', 'Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho' ],
         datasets: [{
-          data: [livrosJaneiro, livrosFevereiro, livrosMarço, livrosAbril, livrosMaio, livrosJunho, livrosJulho, livrosAgosto, livrosSetembro, livrosOutubro, livrosNovembro, livrosDezembro],
+          data: [livrosJulho, livrosAgosto, livrosSetembro, livrosOutubro, livrosNovembro, livrosDezembro, livrosJaneiro, livrosFevereiro, livrosMarço, livrosAbril, livrosMaio, livrosJunho],
           backgroundColor: '#aa7744',
           label: 'Livros Lidos por mês',
         }]
@@ -263,7 +265,7 @@
           },
           y: {
             min: 0,
-            max: 10,
+            max: 6,
             title: {
               display: true,
               text: 'Livros Lidos',
@@ -356,7 +358,7 @@
 
   function abrirInput() {
     divAlterarImagem.innerHTML = `                      
-                    <div id="novaImagem" style="align-items: center;text-align: center;  position: absolute; margin-top: 200px; right: 300px; width: 700px; background-color: sienna; ">
+                    <div id="novaImagem" class="alteracaoImagem">
                           <h2>Insira a URL da nova imagem!</h2>
                           <p>São aceitas urls com até 200 caracteres  e final JPG, GIF, PNG e JPEG</p>
                           <input type="text" name="" id="inp_novaImagem">
