--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,16 @@
 
     <title>OpenBook | Página Inicial</title>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="./js/sessao.js"></script>
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/estilo.css">
     <link rel="icon" href="./assets/imgs/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
-
-<body>
+<!--onload="graficoIndex()"-->
+<body onload="graficoIndex()">
     <div class="header">
       <a href="index.html">
         <img src="assets/imgs/logoExtendedCopy.png" alt="logo" class="logo">
@@ -50,7 +52,9 @@
         <div class="introduction">
           <p>Quando se fala sobre leitura no Brasil, existe um tabu enorme sobre livros, pois na nossa cultura a leitura está estritamente relacionada com estudos e pesquisas, não com momentos de lazer e descanso. <br><br>
              De acordo com o Instituto Pró-Livro, nos últimos 4 anos perdemos 4.5 milhões de leitorese os principais motivos foram: . Com isso apenas X% da população tem o hábito de ler, com uma média de X.X livros lidos no ultimo mês. </p>
-          <img src="assets/imgs/graficoTemp.png" alt="imagemIncubadora" />
+          <div class="graficoInicio">
+            <canvas id="grafUsuarios"></canvas>
+          </div>
         </div>
       </div>
       <div class="section">
@@ -65,18 +69,18 @@
         <div class="advantages">
           <div class="card">
             <h2>Fórum</h2>
-            <img src="assets/imgs/forum.svg" alt="precisão" /> 
-            <span>Nosso sistema de monitoramento fornece uma visualização extremamente precisa dos dados de variação da temperatura, em graus celsius, dentro das incubadoras mantidas pelo seu hospital.</span>
+            <img src="assets/imgs/forum.svg" alt="Fórum" /> 
+            <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates quis iste distinctio corporis sint animi autem, fuga delectus quae impedit quod consectetur cupiditate et vitae, hic perspiciatis eos sed? Et, odit inventore!</span>
           </div>
           <div class="card">
             <h2>RecomendAI</h2>
-            <img src="assets/imgs/ia.svg" alt="segurança" />
-            <span>Com a implementação da solução Safe Sleep, é possível garantir que as incubadoras se mantenham sempre como um ambiente estável e completamente seguro para os recém-nascidos.</span>
+            <img src="assets/imgs/ia.svg" alt="RecomendAI" />
+            <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum fugit hic ratione animi nihil aspernatur debitis nesciunt! Nulla eius a, deleniti dicta cupiditate at quo delectus facilis modi veritatis.</span>
           </div>
           <div class="card">
             <h2>Lista de desejos</h2>
-            <img src="assets/imgs/livro.svg" alt="eficiência" />
-            <span>O projeto é uma ferramenta de grande eficácia no auxilio do monitoramento da saúde dos bebês, alertando o usuário caso haja uma variação de temperatura que possa comprometer o desenvolvimento neonatal.</span>
+            <img src="assets/imgs/livro.svg" alt="lista de Livros" />
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore qui, at ad dolorem quo voluptas ratione earum repellat impedit perspiciatis suscipit dignissimos excepturi quae laboriosam error unde cupiditate ducimus quia ea quos. Perspiciatis?</span>
           </div>
         </div>
       </div>
@@ -109,47 +113,64 @@
       </div>
       
     </footer>
-    
-    <!-- <div class="banner">
-      <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
-      </div>
-    </div>
-  
-    <div class="social">
-      <div class="container">
-        <div class="boxes">
-          <div class="box">
-            <img src="assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/growth_color.png">
-            <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <div class="footer">
-      <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-        <span class="version">v1.0.0</span>
-      </div>
-    </div> -->
   </body>
 
 </html>
+
+<script>
+  function graficoIndex() {
+    var optionsLegend = {
+    display: true,
+    labels: {
+      color: '#f0cf95',
+      font: {
+        size: 15,
+      },
+      padding: 40
+    },
+    position: 'bottom'
+  }
+  var divGrafUsuarios = document.getElementById('grafUsuarios').getContext('2d');
+  divGrafUsuarios.canvas.parentNode.style.width = '600px';
+  divGrafUsuarios.canvas.parentNode.style.height = '600px';
+  divGrafUsuarios.canvas.width = 1;
+  divGrafUsuarios.canvas.height = 1;
+
+  var graficogenerosPref = new Chart(
+    divGrafUsuarios,
+    {
+      type: 'doughnut',
+      data: {
+        labels: ['Terror', 'Romance', 'Ficção'],
+        datasets: [{
+          data: [3, 4, 1],
+          backgroundColor: [
+            '#000000',
+            '#e6aa77',
+            '#aa7744'
+          ],
+          label: 'Livros lidos'
+        }]
+      },
+      options: {
+        plugins: {
+          title: {
+            color: '#f0cf95',
+            display: true,
+            text: 'Livros lidos',
+            font: {
+              size: 31
+            },
+            padding: 30
+          },
+          legend: optionsLegend
+        }
+      }
+    }
+  )
+
+
+
+}
+
+</script>
