grafico conectado com o banco

--- a/public/dashboard/livros.html
+++ b/public/dashboard/livros.html
@@ -158,6 +158,10 @@
 
 <script>
 
+  function filtrarTempo(){
+    
+  }
+
   function filtrarGenero(){
 
     var filtroGenero = sel_genero.value;
@@ -467,6 +471,22 @@
   
   
   a função listar livros pode encrementar 3 listas com genero autores e nomes   
+  
+          labels: ['ficção Cientifica', 'terror', 'biografia', 'aventura', 'drama', 'romance', 'desenvolvimento'],
+        datasets: [{
+          data: [numFicCientifica, numTerror, numBiografia, numAventura, numDrama, numRomance, numDesenvolvimento],
+          backgroundColor: [
+            '#000000',
+            '#e6aa77',
+            '#aa7744',
+            '#ffffff',
+            '#cc8c37',
+            '#381611',
+            '#f0cf95',
+            '#f00',
+
+          ],
+  
   */
 
 
