--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -24,7 +24,7 @@
 </head>
 <!--onload="validarSessao(), atualizarGraficos()"-->
 
-<body onload="validarSessao(), atualizarGraficos()">
+<body onload="validarSessao(), pegarDados()">
 
   <div class="header">
     <a href="index.html">
@@ -161,6 +161,62 @@
   var livrosJunho = 0;
 
 
+  var numFicCientifica = 0;
+  var numTerror = 0;
+  var numBiografia = 0;
+  var numAventura = 0;
+  var numDrama = 0;
+  var numRomance = 0;
+  var numDesenvolvimento = 0;
+
+  function pegarDados(){
+    fetch("/livro/listarLivros").then(function (resposta) {
+      if (resposta.ok) {
+        if (resposta.status == 204) {
+          var feed = document.getElementById("generosPref");
+          var mensagem = document.createElement("h1");
+          mensagem.innerHTML = "Nenhum resultado encontrado."
+          feed.appendChild(mensagem);
+          throw "Nenhum resultado encontrado!!";
+        }
+
+        resposta.json().then(function (resposta) {
+          console.log("Dados recebidos: ", JSON.stringify(resposta));
+
+
+
+          for (let i = 0; i < resposta.length; i++) {
+            var livro = resposta[i];
+
+            var genero = livro.genero;
+
+            if(genero == 'desenvolvimento'){
+              numDesenvolvimento ++;
+            }else if(genero == 'romance'){
+              numRomance ++;
+            }else if(genero == 'drama'){
+              numDrama ++;
+            }else if(genero == 'aventura'){
+              numAventura ++;
+            }else if(genero == 'biografia'){
+              numBiografia ++;
+            }else if(genero == 'terror'){
+              numTerror ++;
+            }else if(genero == 'ficCientifica'){
+              numFicCientifica ++;
+            }
+
+          }
+          atualizarGraficos()
+
+        });
+      } else {
+        throw ('Houve um erro na API!');
+      }
+    }).catch(function (resposta) {
+      console.error(resposta);
+    });
+  }
 
 
 
@@ -209,13 +265,18 @@
     {
       type: 'doughnut',
       data: {
-        labels: ['Terror', 'Romance', 'Ficção'],
+        labels: ['ficção Cientifica', 'terror', 'biografia', 'aventura', 'drama', 'romance', 'desenvolvimento'],
         datasets: [{
-          data: [3, 4, 1],
+          data: [numFicCientifica, numTerror, numBiografia, numAventura, numDrama, numRomance, numDesenvolvimento],
           backgroundColor: [
             '#000000',
             '#e6aa77',
-            '#aa7744'
+            '#aa7744',
+            '#ffffff',
+            '#cc8c37',
+            '#381611',
+            '#f0cf95'
+
           ],
           label: 'Livros lidos'
         }]
