excluindo itens não usados no projeto

--- a/public/bobia.html
+++ b/public/bobia.html
@@ -128,7 +128,7 @@ async function gerarResposta() {
 
 var texto = document.getElementById('pergunta').value;
 
-var pergunta = `Me recomende um livro conforme o pedido a seguir: ${texto}, tenho costume de ler ${maisLido} e ${segMaisLido} mas já li todos esses livros a seguir então não me recomende eles: ${livrosLidos}, se for feita qualquer pergunta que não tenha relação com recomendações de livros responda apenas com: "A recomendAI serve apenas para recomendar livros" `
+var pergunta = `Me recomende um livro conforme o pedido a seguir: ${texto}, tenho costume de ler ${maisLido} e ${segMaisLido} mas já li todos esses livros a seguir então não me recomende eles: ${livrosLidos} `
 
 console.log(pergunta)
 
