documentação finalizada e começando css da leftDiv IA

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -24,7 +24,7 @@
     </a>
       <ul class="navbar">
         <li>
-          <a href="index.html">Inicial</a>
+          <a href="index.html">Início</a>
         </li>
         <li>|</li>
         <li>
