--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       </a>
         <ul class="navbar">
           <li class="paginaAtual">
-            <a class="paginaAtual" href="#">Inicial</a>
+            <a class="paginaAtual" href="#">Início</a>
           </li>
           <li>|</li>
           <li>
@@ -40,6 +40,7 @@
         <p style="color: #a6481b; font-size: 90px;">Open Book</p>
         <br>
         Criando a <span class="spanEnfase">nossa</span> própria <span class="spanEnfase">história</span>
+        <img src="assets/imgs/among-us-red-png-01-459x600.png" alt="" class="amongus">
       </span>
     </div>
 
