--- a/public/login.html
+++ b/public/login.html
@@ -21,12 +21,13 @@
     <!--Header-->
 
     <div class="header">
+      <img src="" alt="">
         <a href="index.html">
           <img src="assets/imgs/logoExtendedCopy.png" alt="logo" class="logo">
         </a>
           <ul class="navbar">
             <li>
-              <a href="index.html">Inicial</a>
+              <a href="index.html">Início</a>
             </li>
             <li>|</li>
             <li class="paginaAtual">
@@ -147,7 +148,7 @@
                 
 
                     setTimeout(function () {
-                        window.location = "./dashboard/usuario.html";
+                        window.location = "./dashboard/livros.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
